@@ -103,6 +103,8 @@ x2goclient (4.0.5.1-0x2go1) UNRELEASED; urgency=low
       Progress file deduplication script.
     - deduplicate.sh: add duplicates-to-real mapping.
     - deduplicate.sh: add missed local variable declaration.
+    - deduplicate.sh: new function for parsing otool's output and printing
+      library dependencies if no error occurred.
 
   [ Oleksandr Shneyder ]
   * New upstream release (4.0.5.1):
